@@ -5,7 +5,7 @@
  @copyright Copyright &copy; 2005, Middlebury College
  @license http://www.gnu.org/copyleft/gpl.html GNU General Public License (GPL)
  
- @version $Id: changelog.xml,v 1.92 2007/12/12 18:20:02 adamfranco Exp $
+ @version $Id: changelog.xml,v 1.93 2007/12/12 18:21:52 adamfranco Exp $
  -->
 <!DOCTYPE changelog SYSTEM "../dtds/changelog.dtd">
 
@@ -19,6 +19,8 @@
 			
 			For upgrades from earlier releases, please run the update located under 
 			Admin Tools --&gt; Segue Updates.
+			
+			This relase of Segue uses Harmoni 0.13.5 and Polyphony 0.10.5.
 		</releaseNotes>
 		<important author='adam' date='2007-12-06'>
 			Existing installations need to have the Segue Update run under 
